WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280088
[Writing Tools] Pondering animation never stops if a session is ended and no replacement text is received
https://bugs.webkit.org/show_bug.cgi?id=280088
Summary
[Writing Tools] Pondering animation never stops if a session is ended and no ...
Richard Robinson
Reported
2024-09-20 14:52:02 PDT
rdar://136158646
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-09-20 14:53:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34001
EWS
Comment 2
2024-09-23 10:10:09 PDT
Committed
284085@main
(ca8e47993532): <
https://commits.webkit.org/284085@main
> Reviewed commits have been landed. Closing PR #34001 and removing active labels.
EWS
Comment 3
2024-09-24 10:33:58 PDT
Committed
280938.372@safari-7619-branch
(c084a301df97): <
https://commits.webkit.org/280938.372@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1881 and removing active labels.
EWS
Comment 4
2024-09-25 13:20:33 PDT
Committed
283286.133@safari-7620-branch
(3bb368c302ca): <
https://commits.webkit.org/283286.133@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1903 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug