[Writing Tools] Pondering animation never stops if a session is ended and no replacement text is received https://bugs.webkit.org/show_bug.cgi?id=280088 rdar://136158646

Reviewed by Aditya Keerthi.

Ensure that intelligence text animations are considered to be "complete" even if no replacement text has been received.

* Source/WebCore/page/writing-tools/WritingToolsController.mm:
(WebCore::WritingToolsController::intelligenceTextAnimationsDidComplete):
(WebCore::WritingToolsController::didEndWritingToolsSession<WritingTools::Session::Type::Composition>):

Canonical link: https://commits.webkit.org/284085@main